updated all code

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -26,7 +26,7 @@
 			document["predict_button"].bind("click", get_prediction)
 
 			</script>
-		<p>How do you feel about the company?</p>
+		<h1>How is Amazon treating you?</h1>
 		<div class="opinions">
 			<p>How do you feel about the culture values?</p>
 			<select id="culture">
@@ -65,7 +65,9 @@
   			<option value="5">5</option>
 			</select>
 		</div>
+		<h4>Pros</h4>
     <textarea id="pros" placeholder="Pros of the company..."></textarea>
+		<h4>Cons</h4>
     <textarea id="cons" placeholder="Cons of the company..."></textarea>
 		<button id="predict_button">Predict!</button>
 		<div id="result"></div>
