--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,10 +3,36 @@
 	<head>
 		<title>Work/Life Balance</title>
 		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/agency.min.css">
 		<link rel="stylesheet" href="css/style.css">
 		<script type="text/javascript" src="brython.js"></script>
 		<script type="text/javascript" src="brython_stdlib.js"></script>
 	</head>
+	<!-- Navigation -->
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+	  <div class="container">
+	    <a class="navbar-brand" href="#">
+	    </a>
+	    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+	          <span class="navbar-toggler-icon"></span>
+      </button>
+	    <div class="collapse navbar-collapse" id="navbarResponsive">
+	      <ul class="navbar-nav ml-auto">
+	        <li class="nav-item active">
+	          <a class="nav-link" href="#">Home
+	                <span class="sr-only">(current)</span>
+	              </a>
+	        </li>
+	        <li class="nav-item">
+	          <a class="nav-link" href="https://github.com/qinj/Internal_Sentiment_Towards_Workplace">GitHub Repository</a>
+	        </li>
+	        <li class="nav-item">
+	          <a class="nav-link" href="https://www.linkedin.com/in/jqin/">Contact</a>
+	        </li>
+	      </ul>
+	    </div>
+	  </div>
+	</nav>
 
 	<body onload="brython(1)">
 			<script type="text/python3">
@@ -31,6 +57,7 @@
 			</script>
 		<div class="container">
 		<h1>How is Amazon treating you?</h1>
+	  <h6>This model will predict the sentiment on work/life balance at Amazon! Use this score to make adjustments to be a more cohesive and fun team.</h6>
 		</div>
 		<div id="opinions" class="form-group">
 			<div class="container">
